src/index.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

body {
  box-sizing: border-box;
  font-family: 'Mulish', sans-serif; 
}

.border-articles {
  border-bottom: 1px solid #DFE0EB; 
}
.block{
  display: block;
}

.MuiDataGrid-colCell:hover {
  border-right: none !important; 
}
.css-kzyyzb-MuiDataGrid-root{
  border: none !important;
}
.css-kzyyzb-MuiDataGrid-root .MuiDataGrid-columnSeparator--sideRight{
  display: none !important;
}
.MuiDataGrid-root .MuiDataGrid-cell:focus {
  outline: none !important;
}
 .MuiDataGrid-columnHeader:focus{
  outline: none !important;

}
.ticket-cell .css-t89xny-MuiDataGrid-columnHeaderTitle:first-child {
  margin-left: 31px;
  color:#9FA2B4;
  font-weight:700;
  font-size: 14px;
}
.head-cell .css-t89xny-MuiDataGrid-columnHeaderTitle{
  color:#9fa2b4;
  font-weight:700 !important;
  font-size: 14px;
}
.MuiDataGrid-columnHeaderTitle:first-child{
  margin-left: 31px;
}
.MuiDataGrid-columnHeaderTitle{
  color:#9fa2b4;
  font-weight:700 !important;
  font-size: 14px;
}
.addCircle{
  color: #F0F1F7;
}

